navigation fixed in homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,17 @@
-<h1>Welcome to the Home Page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+    <div class="container mt-5">
+        <h1>Welcome to the Home Page</h1>
+        <h2>Let's predict the math score</h2>
+        <a href="{{ url_for('predict_datapoint') }}" class="btn btn-primary">Go to Prediction Page</a>
+    </div>
+</body>
+</html>
